syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/library/create.proto";
import "com/example/internalapi/input/reqreply/library/get_all.proto";
import "com/example/internalapi/input/reqreply/library/get_by_id.proto";
import "com/example/internalapi/input/reqreply/library/update.proto";
import "com/example/internalapi/input/reqreply/library/delete.proto";

service LibraryService {
  rpc createLibrary(com.example.internalapi.request.library.create.proto.CreateLibraryRequest)
      returns (com.example.internalapi.request.library.create.proto.CreateLibraryResponse);

  rpc deleteLibrary(com.example.internalapi.request.library.delete.proto.DeleteLibraryRequest)
      returns (com.example.internalapi.request.library.delete.proto.DeleteLibraryResponse);

  rpc getAllLibraries(com.example.internalapi.request.library.get_all.proto.GetAllLibrariesRequest)
      returns (com.example.internalapi.request.library.get_all.proto.GetAllLibrariesResponse);

  rpc getLibraryById(com.example.internalapi.request.library.get_by_id.proto.GetLibraryByIdRequest)
      returns (com.example.internalapi.request.library.get_by_id.proto.GetLibraryByIdResponse);

  rpc updateLibrary(com.example.internalapi.request.library.update.proto.UpdateLibraryRequest)
      returns (com.example.internalapi.request.library.update.proto.UpdateLibraryResponse);
}
